--- a/Dockerfile.3.9.transformers.cpu
+++ b/Dockerfile.3.9.transformers.cpu
@@ -9,55 +9,15 @@ ENV PATH /opt/conda/bin:$PATH
 RUN apt-get update && apt-get install -y wget vim bzip2
 RUN apt-get update --fix-missing && apt-get install -y git ca-certificates 
 
-RUN wget --quiet https://repo.anaconda.com/archive/Anaconda3-2020.11-Linux-x86_64.sh -O ~/anaconda.sh && \
-    /bin/bash ~/anaconda.sh -b -p /opt/conda && \
-    rm ~/anaconda.sh && \
-    ln -s /opt/conda/etc/profile.d/conda.sh /etc/profile.d/conda.sh && \
-    echo ". /opt/conda/etc/profile.d/conda.sh" >> ~/.bashrc && \
-    echo "conda activate base" >> ~/.bashrc
-
-# Install basic frameworks
-RUN conda install -n base pytorch cpuonly -c pytorch && \
-    conda install -c anaconda tensorflow
-RUN conda install -n base nb_conda waitress datashader && \
-    conda install -n base -c conda-forge "nodejs>=10.0.0" jupyterlab jupyterlab-git dask-ml dask-labextension dask-xgboost "spacy==2.3.2" fbprophet pomegranate shap lime umap-learn tslearn kmodes imbalanced-learn pymc3 stumpy tqdm node2vec mlflow ipywidgets && \
-    jupyter labextension install dask-labextension && \
-    jupyter serverextension enable --py --sys-prefix dask_labextension --user && \
-    pip install jupyter-tensorboard && \
-    jupyter labextension install jupyterlab_tensorboard && \
-    jupyter serverextension enable --py --sys-prefix jupyter_tensorboard && \
-    jupyter tensorboard enable --user && \
-    python -m spacy download en_core_web_sm && \
-    pip install pyarrow>=3.0.0 vaex>=4.0.0 causalnex bocd spacytextblob==0.1.7 spektral && \
-    jupyter lab build && \
-    jupyter lab clean && \
-    pip install pyopenssl && \
-    apt-get update && apt-get install -y build-essential && \
-    pip install pyfim
-RUN pip install rrcf 
-#RUN pip install auto-sklearn 
-RUN pip install pyod kats neuralprophet
-RUN pip install transformers
-RUN pip install splunk-sdk splunk-opentelemetry[all] opentelemetry-instrumentation-fastapi
-RUN conda install pyg -c pyg
-RUN conda install -n base -c conda-forge widgetsnbextension
-
-RUN jupyter labextension install @jupyter-widgets/jupyterlab-manager
-RUN jupyter labextension enable --py widgetsnbextension
-
-RUN conda install -n base -c conda-forge "fastapi<=0.76.0"
-RUN conda install -n base aiofiles
-RUN conda clean --all -f -y && \
-    find "/opt/conda" -depth \( -type f -a -name '*.pyc' -o -name '*.pyo' -o -name '*.a' -o -name '*.js.map' \) -exec rm -rf '{}' \;
-
+# Install basics
+WORKDIR /srv
+RUN mkdir /dltk
+COPY ./requirements_transformers39.txt /dltk/requirements_transformers39.txt
+RUN pip install --no-cache-dir --upgrade -r /dltk/requirements_transformers39.txt
 RUN apt-get update && apt-get upgrade -y
 
-RUN mkdir /dltk
-# Define working directory
-WORKDIR /srv
-
 # Copy bootstrap entry point script
-COPY bootstrap_fast.sh /dltk/
+COPY bootstrap_transformers.sh /dltk/
 COPY app /dltk/app
 COPY notebooks /dltk/notebooks
 # Copy certificates generated with
@@ -78,10 +38,8 @@ RUN chgrp -R 0 /srv && \
 RUN chmod g+w /etc/passwd
 USER 1001
 
-# Install additional user libraries
-
 # Expose container port 5000 (MLTK Container Service) and 8888 (Notebook) and 6006 (Tensorboard)
-EXPOSE 5000 8888 6006
+EXPOSE 5000 8888
 
 # Define bootstrap as entry point to start container
-ENTRYPOINT ["/dltk/bootstrap_fast.sh"]
+ENTRYPOINT ["/dltk/bootstrap_transformers.sh"]
