--- a/Dockerfile.3.9.transformers.cpu
+++ b/Dockerfile.3.9.transformers.cpu
@@ -12,6 +12,7 @@ RUN apt-get update --fix-missing && apt-get install -y git ca-certificates
 # Install basics
 WORKDIR /srv
 RUN mkdir /dltk
+RUN apt install python3.8-venv
 RUN python -m venv .env && \
     ource .env/bin/activate && \
     .env/Scripts/activate
