--- a/Dockerfile.3.9.transformers_golden.cpu
+++ b/Dockerfile.3.9.transformers_golden.cpu
@@ -34,12 +34,12 @@ RUN conda install -n base nb_conda waitress datashader && \
     pip install pyopenssl && \
     apt-get update && apt-get install -y build-essential && \
     pip install pyfim
-RUN pip install rrcf 
+#RUN pip install rrcf 
 #RUN pip install auto-sklearn 
-RUN pip install pyod kats neuralprophet
+#RUN pip install pyod kats neuralprophet
 RUN pip install splunk-sdk splunk-opentelemetry[all] opentelemetry-instrumentation-fastapi
-RUN conda install pyg -c pyg
-RUN conda install -n base -c conda-forge widgetsnbextension
+#RUN conda install pyg -c pyg
+#RUN conda install -n base -c conda-forge widgetsnbextension
 
 RUN jupyter labextension install @jupyter-widgets/jupyterlab-manager
 RUN jupyter labextension enable --py widgetsnbextension
