--- a/Dockerfile.3.9.transformers_golden_img.cpu
+++ b/Dockerfile.3.9.transformers_golden_img.cpu
@@ -54,6 +54,10 @@ RUN apt-get update && apt-get upgrade -y
 RUN mkdir /dltk
 # Define working directory
 WORKDIR /srv
+# install transformers dependencies
+COPY ./requirements_transformers39.txt /dltk/requirements_transformers39.txt
+RUN pip install --no-cache-dir --upgrade -r /dltk/requirements_transformers39.txt
+RUN apt-get update && apt-get upgrade -y
 
 # Copy bootstrap entry point script
 COPY bootstrap_fast.sh /dltk/
