--- a/Dockerfile.3.9.transformers_golden_img.cpu
+++ b/Dockerfile.3.9.transformers_golden_img.cpu
@@ -17,8 +17,9 @@ RUN wget --quiet https://repo.anaconda.com/archive/Anaconda3-2022.05-Linux-x86_6
     echo "conda activate base" >> ~/.bashrc
 
 # Install basic frameworks
-RUN conda install -n base pytorch cpuonly -c pytorch && \
-    conda install -c anaconda tensorflow
+RUN conda config --set channel_priority false && \
+    conda install -n base pytorch cpuonly -c pytorch && \
+    conda install -c anaconda tensorflow==2.8.0
 RUN conda install -n base nb_conda waitress datashader && \
     conda install -n base -c conda-forge "nodejs>=10.0.0" jupyterlab jupyterlab-git dask-ml dask-labextension dask-xgboost "spacy==2.3.2" fbprophet pomegranate shap lime umap-learn tslearn kmodes imbalanced-learn pymc3 stumpy tqdm node2vec mlflow ipywidgets && \
     jupyter labextension install dask-labextension && \
