--- a/requirements_transformers39.txt
+++ b/requirements_transformers39.txt
@@ -4,15 +4,12 @@ pydantic>=1.8.0,<2.0.0
 uvicorn>=0.15.0,<0.16.0
 aiofiles
 
-# Jupyter Lab environment
-jupyterlab<3.0.0
-jupyterlab-nvdashboard==0.5.0
-
 # other dependencies
 tensorflow==2.8.0
 keras==2.8.0
 numpy==1.22.1
 
 # libraries
+torch
 pandas
 transformers
