modified:   Dockerfile.3.9.transformers.cpu

--- a/Dockerfile.3.9.transformers.cpu
+++ b/Dockerfile.3.9.transformers.cpu
@@ -9,8 +9,13 @@ ENV PATH /opt/conda/bin:$PATH
 RUN apt-get update && apt-get install -y wget vim bzip2
 RUN apt-get update --fix-missing && apt-get install -y git ca-certificates 
 
-# pip update
-RUN pip install --upgrade pip
+# conda install
+RUN wget --quiet https://repo.anaconda.com/archive/Anaconda3-2020.11-Linux-x86_64.sh -O ~/anaconda.sh && \
+    /bin/bash ~/anaconda.sh -b -p /opt/conda && \
+    rm ~/anaconda.sh && \
+    ln -s /opt/conda/etc/profile.d/conda.sh /etc/profile.d/conda.sh && \
+    echo ". /opt/conda/etc/profile.d/conda.sh" >> ~/.bashrc && \
+    echo "conda activate base" >> ~/.bashrc
 
 # DLTK related libraries
 RUN conda install -n base nb_conda waitress datashader && \
