--- a/Dockerfile.3.9.transformers.gpu
+++ b/Dockerfile.3.9.transformers.gpu
@@ -19,26 +19,32 @@ RUN wget --quiet https://repo.anaconda.com/archive/Anaconda3-2020.11-Linux-x86_6
 
 # DLTK related libraries
 RUN conda install -n base nb_conda waitress datashader && \
-    conda install -n base -c conda-forge "nodejs>=10.0.0" jupyterlab jupyterlab-git dask-ml dask-labextension dask-xgboost "spacy==2.3.2" fbprophet pomegranate shap lime umap-learn tslearn kmodes imbalanced-learn pymc3 stumpy tqdm node2vec mlflow ipywidgets && \
+    conda install -n base -c conda-forge "nodejs>=10.0.0" jupyterlab jupyterlab-git dask-ml dask-labextension dask-xgboost "spacy==2.3.2" fbprophet pomegranate shap lime umap-learn tslearn kmodes imbalanced-learn pymc3 stumpy tqdm node2vec mlflow && \
     jupyter labextension install dask-labextension && \
     jupyter serverextension enable --py --sys-prefix dask_labextension --user && \
     pip install jupyter-tensorboard && \
     jupyter labextension install jupyterlab_tensorboard && \
     jupyter serverextension enable --py --sys-prefix jupyter_tensorboard && \
     jupyter tensorboard enable --user && \
+    pip install "jupyterlab-nvdashboard==0.5.0" && \
+    jupyter labextension install jupyterlab-nvdashboard && \
     python -m spacy download en_core_web_sm && \
     pip install pyarrow>=3.0.0 vaex>=4.0.0 causalnex bocd spacytextblob==0.1.7 spektral && \
     jupyter lab build && \
     jupyter lab clean && \
-    pip install pyopenssl && \
-    apt-get update && apt-get install -y build-essential && \
-    pip install pyfim
+    pip install pyopenssl
+RUN jupyter labextension install @jupyter-widgets/jupyterlab-manager
+RUN jupyter labextension enable --py widgetsnbextension
+RUN conda install -n base -c conda-forge "fastapi<=0.76.0"
+RUN conda install -n base aiofiles
+RUN conda clean --all -f -y && \
+    find "/opt/conda" -depth \( -type f -a -name '*.pyc' -o -name '*.pyo' -o -name '*.a' -o -name '*.js.map' \) -exec rm -rf '{}' \;
 
 # Transformers related libraries
 WORKDIR /srv
 RUN mkdir /dltk
-COPY ./requirements_transformers39_cpu.txt /dltk/requirements_transformers39_cpu.txt
-RUN pip install --no-cache-dir --upgrade -r /dltk/requirements_transformers39_cpu.txt
+COPY ./requirements_transformers39_gpu.txt /dltk/requirements_transformers39_gpu.txt
+RUN pip install --no-cache-dir --upgrade -r /dltk/requirements_transformers39_gpu.txt
 RUN apt-get update && apt-get upgrade -y
 
 # Copy bootstrap entry point script
