--- a/Dockerfile.3.9.transformers_golden_img.cpu
+++ b/Dockerfile.3.9.transformers_golden_img.cpu
@@ -35,7 +35,7 @@ RUN conda install -n base nb_conda waitress datashader && \
     pip install pyopenssl && \
     apt-get update && apt-get install -y build-essential && \
     pip install pyfim
-RUN pip install rrcf 
+# RUN pip install rrcf 
 #RUN pip install auto-sklearn 
 RUN pip install pyod kats neuralprophet
 RUN pip install splunk-sdk splunk-opentelemetry[all] opentelemetry-instrumentation-fastapi
