fixed dockerfile for transformers

--- a/Dockerfile.3.9.transformers.gpu
+++ b/Dockerfile.3.9.transformers.gpu
@@ -34,6 +34,9 @@ RUN conda install -n base nb_conda waitress datashader && \
     jupyter lab build && \
     jupyter lab clean && \
     pip install pyopenssl
+RUN pip install splunk-sdk splunk-opentelemetry[all] opentelemetry-instrumentation-fastapi
+RUN conda install -n base -c conda-forge widgetsnbextension
+
 RUN jupyter labextension install @jupyter-widgets/jupyterlab-manager
 RUN jupyter labextension enable --py widgetsnbextension
 RUN conda install -n base -c conda-forge "fastapi<=0.76.0"
