--- a/requirements_transformers39_gpu.txt
+++ b/requirements_transformers39_gpu.txt
@@ -1,5 +1,5 @@
 # FastAPI stack
-#fastapi>=0.68.0,<0.69.0
+fastapi>=0.68.0,<0.69.0
 pydantic>=1.8.0,<2.0.0
 uvicorn>=0.15.0,<0.16.0
 aiofiles
@@ -16,3 +16,4 @@ tensorflow==2.8.0
 keras==2.8.0 # come with tensorflow
 numpy==1.22.1
 sklearn
+pandas
